enhance rest-service